// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch[Base] should render correctly  1`] = `
<button
  class="c-fpwcqw soui-switch-wrapper"
  role="switch"
  type="button"
>
  <input
    style="display: none;"
    tabindex="0"
    type="checkbox"
  />
  <div
    class="cbshad0 soui-switch-indicator"
    dir="ltr"
  />
  <div
    class="c-qdb0rm soui-switch-content"
  >
    <div
      class="cw5kt55 soui-switch-text-padding"
    />
  </div>
</button>
`;

exports[`Switch[Base] should render correctly about loading 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-fpwcqw soui-switch-wrapper c-y3xecx soui-switch-wrapper-checked c-cusbfw soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="cyhq0pt soui-switch-loading"
      />
    </div>
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-fpwcqw soui-switch-wrapper c-cusbfw soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    >
      <div
        class="cyhq0pt soui-switch-loading"
      />
    </div>
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about size 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px; align-items: center;"
>
  <button
    class="c-fpwcqw soui-switch-wrapper cmtu5pr soui-switch-wrapper-small"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-fpwcqw soui-switch-wrapper"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-fpwcqw soui-switch-wrapper cmpsa77 soui-switch-wrapper-large"
    role="switch"
    type="button"
  >
    <input
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;

exports[`Switch[Base] should render correctly about status 1`] = `
<div
  style="display: flex; flex-direction: row; gap: 24px;"
>
  <button
    class="c-fpwcqw soui-switch-wrapper c-y3xecx soui-switch-wrapper-checked c-cusbfw soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      checked=""
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
  <button
    class="c-fpwcqw soui-switch-wrapper c-cusbfw soui-switch-wrapper-disabled"
    role="switch"
    type="button"
  >
    <input
      disabled=""
      style="display: none;"
      tabindex="0"
      type="checkbox"
    />
    <div
      class="cbshad0 soui-switch-indicator"
      dir="ltr"
    />
    <div
      class="c-qdb0rm soui-switch-content"
    >
      <div
        class="cw5kt55 soui-switch-text-padding"
      />
    </div>
  </button>
</div>
`;
